--- a/resources/ui/error-notification-page.ui
+++ b/resources/ui/error-notification-page.ui
@@ -24,6 +24,43 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
             </lookup>
           </lookup>
         </binding>
+        <property name="child">
+          <object class="GtkBox">
+            <property name="orientation">0</property>
+            <property name="halign">3</property>
+            <property name="spacing">12</property>
+            <child>
+              <object class="GtkButton" id="preferences">
+                <property name="label" translatable="yes">Open preferences</property>
+                <property name="action-name">app.preferences</property>
+                <style>
+                  <class name="pill"/>
+                  <class name="suggested-action"/>
+                </style>
+              </object>
+            </child>
+            <child>
+              <object class="GtkButton" id="about">
+                <property name="label" translatable="yes">Contact information</property>
+                <property name="action-name">app.about</property>
+                <style>
+                  <class name="pill"/>
+                  <class name="suggested-action"/>
+                </style>
+              </object>
+            </child>
+            <child>
+              <object class="GtkButton" id="source">
+                <property name="label" translatable="yes">Open source</property>
+                <property name="action-name">win.open-source-url</property>
+                <style>
+                  <class name="pill"/>
+                  <class name="suggested-action"/>
+                </style>
+              </object>
+            </child>
+          </object>
+        </property>
       </object>
     </child>
   </template>
