--- a/resources/ui/application-window.ui
+++ b/resources/ui/application-window.ui
@@ -64,7 +64,7 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
                   <object class="GtkButton">
                     <property name="icon-name">cross-large-symbolic</property>
                     <property name="action-name">win.cancel-loading</property>
-                    <property name="tooltip-text" translatable="yes" context="main-window.toolbar.button.tooltip">Stop loading images</property>
+                    <property name="tooltip-text" translatable="yes" context="main-window.toolbar.button.tooltip">Cancel loading images</property>
                     <property name="sensitive" bind-source="PotDApplicationWindow" bind-property="is-loading" bind-flags="sync-create"/>
                   </object>
                 </child>
