--- a/resources/ui/application-window.ui
+++ b/resources/ui/application-window.ui
@@ -278,7 +278,7 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
                 </child>
                 <child>
                   <object class="AdwStatusPage" id="empty">
-                    <property name="icon-name">de.swsnr.picture-of-the-day</property>
+                    <property name="icon-name">de.swsnr.pictureoftheday</property>
                     <property name="vexpand">true</property>
                     <property name="child">
                       <object class="AdwClamp">
