Fetch and set wallpaper automatically
Remember the time of the last successful update and then check every 30
minutes whether the last update was more than 12 hours ago.
This automatically does some sort of soon'ish retry if an update failed
due to e.g. an intermittent network error, and it also works across
device sleeps.

Add corresponding settings and preferences UI.

Closes GH-13

--- a/resources/ui/preferences-dialog.ui
+++ b/resources/ui/preferences-dialog.ui
@@ -47,5 +47,35 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
         </child>
       </object>
     </child>
+    <child>
+      <object class="AdwPreferencesPage">
+        <property name="title" translatable="yes">Automatic wallpaper</property>
+        <property name="icon-name">today-symbolic</property>
+        <child>
+          <object class="AdwPreferencesGroup">
+            <property name="title" translatable="yes">Set wallpaper automatically</property>
+            <property name="description" translatable="yes">If enabled automatically get the picture of the day from the following source and set it as wallpaper.</property>
+            <child type="header-suffix">
+              <object class="GtkSwitch">
+                <property name="valign">1</property>
+                <property name="active" bind-source="PotDPreferencesDialog" bind-property="set-wallpaper-automatically" bind-flags="sync-create|bidirectional"/>
+              </object>
+            </child>
+            <child>
+              <object class="AdwExpanderRow" id="automatic_source_row">
+                <binding name="title">
+                  <closure function="source_label" type="gchararray">
+                    <lookup name="automatic-source" type="PotDPreferencesDialog">
+                      <constant>PotDPreferencesDialog</constant>
+                    </lookup>
+                  </closure>
+                </binding>
+                <property name="expanded">true</property>
+              </object>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>
   </template>
 </interface>
